--- a/config.toml
+++ b/config.toml
@@ -1,42 +1,66 @@
-baseurl = "/"
+baseurl = "http://feiyoung.netlify.com"
 languageCode = "en-us"
 title = "Wei Liu"
 theme = "hugo-lithium"
 googleAnalytics = ""
-disqusShortname = ""
-ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_cache$", "\\.knit\\.md$", "\\.utf8\\.md$"]
-
+disqusShortname="Wei Liu"
+ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
+hasCJKLanguage= true
+math = true
+enableEmoji=true
+footnotereturnlinkcontents= "↩"
+rssLimit=100
 [permalinks]
-    post = "/:year/:month/:day/:slug/"
+    en = "/:year/:month/:day/:slug/"
+    cn = "/:year/:month/:day/:slug/"
 
+[[menu.main]]
+    name = "主页"
+    url = "/"
+    weight = 1
+[[menu.main]]
+    name = "日志"
+    url = "/cn/"
+    weight = 2      
+  
+[[menu.main]]
+    name = "研究"
+    url = "/research/"
+    weight = 3  
+[[menu.main]]
+    name ="诗词"
+    url = "/poem/"
+    weight = 4
+[[menu.main]]
+    name = "关于"
+    url = "/cn_about/"
+    weight = 5
+    
+[[menu.main]]
+    name = "Blog"
+    url = "/en/"
+    weight = 6
 [[menu.main]]
     name = "About"
-    url = "/about/"
-[[menu.main]]
-    name = "My GitHub"
-    url = "https://github.com/feiyoung"
-[[menu.main]]
-    name = "My Homepage"
-    url = "https://feiyoung.github.io/"
-
+    url = "/en_about/"
+    weight = 7  
+  
+    
 [params]
-    description = "A website built through Hugo and blogdown."
-
+    description = ""
+    footer="&copy; [Wei Liu's HomePage](https://feiyoung.github.io/)2020| [Wei Liu's Github](https://github.com/feiyoung)"
     # options for highlight.js (version, additional languages, and theme)
-    highlightjsVersion = "9.12.0"
-    highlightjsCDN = "//cdnjs.cloudflare.com/ajax/libs"
+    highlightjsVersion = "9.11.0"
+    highlightjsCDN = "//weiliu.org"
     highlightjsLang = ["r", "yaml"]
     highlightjsTheme = "github"
 
-    MathJaxCDN = "//cdnjs.cloudflare.com/ajax/libs"
-    MathJaxVersion = "2.7.5"
-
-    # path to the favicon, under "static"
-    favicon = "favicon.ico"
+    MathJaxCDN = "//weliu.org"
+    MathJaxVersion = "2.7.1"
 
     [params.logo]
-    url = "logo.png"
+    url = "/images/me.jpg"
     width = 50
     height = 50
-    alt = "Logo"
+    alt = "Public"
 
